# Pathfinder_new_website

./: .gitignore  DYNAMIC_SITEMAP_GUIDE.md  SITEMAP_QUICKSTART.md  check_db.py  deployment guide.txt  package-lock.json  package.json  run-dev.bat
backend/: .gitignore  README.md  TEST.PY  add_enrollment.py  check_neet_records.py  check_pathfinder.py  check_wbjee_db.py  fix_result.txt  manage.py  mongodb.py  pyproject.toml  render.yaml  requirements.tx  requirements.txt  seed_blog.py  seed_custom_pages.py  seed_popup.py  test_application.json  test_enrollments.py  test_mongo_images.py  test_pwd.py  test_users_api.py
backend/admin_auth/: authentication.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/alumni/: apps.py  migrate_to_r2.py  models.py  quick_migrate.py  serializers.py  simple_migrate.py  views.py
backend/announcements/: models.py  serializers.py  urls.py  views.py
backend/blog/: models.py  serializers.py  views.py
backend/centres/: models.py  serializers.py  states_data.py  urls.py  views.py
backend/contact_api/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/contact_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/courses/: models.py  serializers.py  urls.py  views.py
backend/custom_pages/: apps.py  models.py  serializers.py  signals.py  sitemap_utils.py  urls.py  views.py
backend/franchise_inquiry/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/jee/: models.py  serializers.py  urls.py  views.py
backend/job_post/: models.py  urls.py  (+2 more)
(+224 files in other folders)
